<resources>
    <string name="app_name">Calculadora</string>
    <string name="resultado">Resultado</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="subtrair">Subtrair</string>
    <string name="somar">Somar</string>
    <string name="n_mero_2">Número 2</string>
    <string name="n_mero_1">Número 1</string>
    <string name="numero2" />
    <string name="numero1" />
</resources>