<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/numero1"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/numero2"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/somar" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtrair" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplicar" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dividir" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/resultado" />

</LinearLayout>
